--- a/dashboard/styles/globals.css
+++ b/dashboard/styles/globals.css
@@ -37,10 +37,10 @@
     @apply text-3xl;
   }
   h5 {
-    @apply text-2xl;
+    @apply text-2xl font-semibold;
   }
   h6 {
-    @apply text-xl;
+    @apply text-xl font-semibold;
   }
 }
 
